# fineLanding

./: CMakeCache.txt  Makefile  README.md  gitignore
doc/: messages.json  readAzData.ino
src/: .gitignore  CMakeLists.txt  CMakePresets.json  finelanding.cfg  main.cpp  read.me
src/main/: CMakeLists.txt  appLog.h  config.cpp  config.h  controller.cpp  controller.h  math.cpp  math.h  message.cpp  message.h  position.cpp  position.h
